--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "aws-srp-client",
   "version": "1.3.1",
   "description": "Authenticate users with AWS Cognito via SRP",
-  "main": "lib/index.js",
+  "exports": "./lib/index.js",
   "types": "lib/index.d.ts",
+  "type": "module",
   "scripts": {
     "test": "jest --config jestconfig.json",
     "build": "tsc",
@@ -14,10 +15,6 @@
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DrMcMarco/aws-srp-client.git"
   },
   "keywords": [
     "AWS",
