--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mocyuto/aws-srp-client.git"
+    "url": "git+https://github.com/mocyuto/aws-srp-client.git"
   },
   "keywords": [
     "AWS",
