--- a/.github/workflows/pinact.yml
+++ b/.github/workflows/pinact.yml
@@ -13,3 +13,6 @@ jobs:
 
       - name: Pin actions
         uses: suzuki-shunsuke/pinact-action@v1.0.0
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          app_private_key: ${{ secrets.PRIVATE_KEY }}
