--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -118,7 +118,7 @@ jobs:
           git push origin v${{ steps.new-version.outputs.version }}
 
       - name: Publish to NPM
-        run: npm publish --access public
+        run: npm publish  --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
